# learn-wgpu

./: Cargo.toml  README.md  build.rs
src/: camera.rs  light.rs  light.wgsl  main.rs  model.rs  texture.rs  triangle.wgsl
